--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
              <div class="info_icon"> <i class="fas fa-info"></i> </div>
               <p class="info"> Plus de 500 logements sont disponibles dans cette ville</p>
             </div> 
-           <main class="main_box"> 
+       <main>
+         <div class="main_box"> 
             <div class="target_lodging" id="hebergements">
               <div class="categorie_title"><header><h2>Hébergements à Marseille</h2></header></div> 
                 <div class="section_box" >
@@ -160,6 +161,7 @@
               </div>
              <aside class="popular_lodging">
               <header class="popular_header"><h2 class="categorie_title_2">Les plus populaires</h2><div class="icon_pop"><i class="fas fa-chart-line"></i></div></header>
+               <div class="popular_media">
                 <article class="media_article">
                   <a href="#">
                     <figure class="aside_figure">
@@ -217,10 +219,10 @@
                     </figure>
                   </a>
                 </article>
-              </aside>
-            </main>
+              </div>
+            </aside>
           </div>
-          <section id="activities">  
+          <div id="activities">  
             <div class="activities_title"><header><h2>Activités à Marseille</h2></header></div>
               <div class="activity">
                 <div class="activity_box">
@@ -245,6 +247,8 @@
                       </figcaption>
                     </figure>
                   </a>
+                </article>
+                <article class="double_article">
                 <a href="#">
                   <figure class="activity_figure">
                     <img class="activity_img_island" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du Frioul">
@@ -277,6 +281,8 @@
                       </figcaption>
                     </figure>
                   </a>
+                </article>
+                <article class="double_article">
                 <a href="#">
                  <figure class="activity_figure">
                   <img class="activity_img_longchamp" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="îles du Frioul">
@@ -287,8 +293,10 @@
                </a>
              </article>
            </div>
-         </div>
-       </section>
+          </div>
+        </div>
+      </main>
+      </div>
      <footer class="footer_box">
        <ul class="footer_ul">
           <li class="footer_category">A propos</li> 
